<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">



    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/delete"

        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:gravity="center"
        android:text="@string/delete_item"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textStyle="bold"

        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"

        >
        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="40dp"
            android:text="@string/delete"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/delete_color"
            android:background="@drawable/delete_tv"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:id="@+id/tvCancel"

            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/gray7"
            android:background="@drawable/delete_tv"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            />

    </LinearLayout>
</LinearLayout>

