<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/custom_bg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/enter_amount"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        />
    <EditText
        android:id="@+id/edtAmount"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/linear_shape"
        android:singleLine="true"
        android:textColor="@color/black"
        android:hint="@string/amount"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginBottom="10dp"
        android:textSize="14sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:weightSum="3"

        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            app:cardBackgroundColor="@color/colorPrimary_dark"
            app:cardElevation="3dp"
            app:cardCornerRadius="20dp"
            android:layout_margin="3dp"


            >
            <Button
                android:id="@+id/btn_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:text="@string/ok"
                android:textColor="@color/white"
                />
        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>

