<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:background="@color/gray1"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/gray1"
            android:textColor="@color/black"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical"
            android:text="@string/general_settings"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cons_profile"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingStart="16dp"
                tools:ignore="RtlCompat,RtlSymmetry"
                android:background="@color/white"

                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/account"
                    android:clickable="false"
                    android:longClickable="false"
                    />

                <ImageView
                    android:id="@+id/arrow1"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:src="@drawable/ic_right_arrow"
                    android:clickable="false"
                    android:longClickable="false"
                    android:padding="13dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/gray5"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_edit_profile"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="16dp"
            tools:ignore="RtlCompat,RtlSymmetry"
            android:background="@color/white"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/edit_profile"
                android:clickable="false"
                android:longClickable="false"
                />

            <ImageView
                android:id="@+id/arrow2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_right_arrow"
                android:clickable="false"
                android:longClickable="false"
                android:padding="13dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray5"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_language"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white"
            android:paddingStart="16dp"
            tools:ignore="RtlCompat,RtlSymmetry"

            tools:layout_editor_absoluteY="100dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:longClickable="false"
                android:text="@string/language_setting"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/arrow3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="false"
                android:longClickable="false"
                android:padding="13dp"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray5"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_terms"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="16dp"
            tools:ignore="RtlCompat,RtlSymmetry"
            android:background="@color/white"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/terms_of_service"
                android:clickable="false"
                android:longClickable="false"
                />

            <ImageView
                android:id="@+id/arrow4"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_right_arrow"
                android:clickable="false"
                android:longClickable="false"
                android:padding="13dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray5"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_contact"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="16dp"
            tools:ignore="RtlCompat,RtlSymmetry"
            android:background="@color/white"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/contact_us"
                android:clickable="false"
                android:longClickable="false"
                />

            <ImageView
                android:id="@+id/arrow5"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="8dp"
                android:clickable="false"
                android:longClickable="false"
                android:padding="13dp"
                android:src="@drawable/ic_right_arrow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray5"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_rate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="16dp"
            tools:ignore="RtlCompat,RtlSymmetry"
            android:background="@color/white"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/rate_this_app"
                android:clickable="false"
                android:longClickable="false"
                />

            <ImageView
                android:id="@+id/arrow6"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_right_arrow"
                android:clickable="false"
                android:longClickable="false"
                android:padding="13dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/gray1"
            android:textColor="@color/black"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:gravity="center_vertical"
            android:text="@string/help"
            android:textSize="16sp"
            android:textStyle="bold"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_about"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="16dp"
            tools:ignore="RtlCompat,RtlSymmetry"
            android:background="@color/white"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/about_tour"
                android:clickable="false"
                android:longClickable="false"
                />

            <ImageView
                android:id="@+id/arrow7"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_right_arrow"
                android:clickable="false"
                android:longClickable="false"
                android:padding="13dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray5"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cons_logout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="16dp"
            tools:ignore="RtlCompat,RtlSymmetry"
            android:background="@color/white"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/Log_out"
                android:clickable="false"
                android:longClickable="false"
                />

            <ImageView
                android:id="@+id/arrow8"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:src="@drawable/ic_right_arrow"
                android:clickable="false"
                android:longClickable="false"
                android:padding="13dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray5"/>

    </LinearLayout>

</ScrollView>