<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/llAction"
        tools:context=".activities_fragments.offer_details_activity.OfferDetailsActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="56dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="vertical">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/image"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:src="@drawable/logo"
                            app:civ_border_color="@color/white"
                            app:civ_border_width="2dp"
                            app:civ_circle_background_color="@color/white" />

                        <TextView
                            android:id="@+id/tvName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:textColor="@color/white"
                            android:textSize="15sp"


                            />
                    </LinearLayout>
                </FrameLayout>

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    app:layout_collapseMode="pin"
                    app:contentInsetEnd="0dp"
                    app:contentInsetStart="0dp"
                    app:contentInsetLeft="0dp"
                    app:contentInsetRight="0dp"
                    >
                    <LinearLayout
                        android:id="@+id/llBack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_vertical"
                        >
                        <ImageView
                            android:id="@+id/arrow"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/ic_arrow_left"
                            android:padding="17dp"
                            android:tint="@color/white"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:text="@string/back"
                            />
                    </LinearLayout>


                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:fillViewport="true"
            android:background="@color/gray1"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="15sp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/new_offer"
                    android:gravity="center"
                    android:background="@drawable/tv_offer"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/offer_value"
                    />
                <TextView
                    android:id="@+id/tvOffer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/gray5"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/llAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/btnAccept"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/accept"
            />
        <Button
            android:id="@+id/btnRefuse"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:background="@color/gray2"
            android:textColor="@color/delete_color"
            android:text="@string/refuse"

            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>